Shortened main file